[gd_scene load_steps=4 format=3 uid="uid://br6ffj42hhqnx"]

[ext_resource type="Script" path="res://GUI/paused_screen.gd" id="1_cfpou"]
[ext_resource type="AudioStream" uid="uid://wb6csdws23i3" path="res://Assets/SFX/button_focus.wav" id="2_b2wnu"]
[ext_resource type="AudioStream" uid="uid://dy5a32ni1h53p" path="res://Assets/SFX/button_click.wav" id="3_ugg81"]

[node name="GamePaused" type="CenterContainer"]
process_mode = 3
top_level = true
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_cfpou")

[node name="ColorRect" type="ColorRect" parent="."]
custom_minimum_size = Vector2(1920, 1080)
layout_mode = 2
color = Color(0.0588235, 0.0588235, 0.0588235, 0.784314)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 50

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.541176, 0.25098, 0.286275, 1)
theme_override_font_sizes/font_size = 164
text = "Paused"

[node name="Control" type="Control" parent="VBoxContainer"]
layout_mode = 2

[node name="BackButton" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Back"

[node name="ExitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Main Menu"

[node name="AudioButtonFocus" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_b2wnu")
volume_db = -6.0
bus = &"Main Menu SFX"

[node name="AudioButtonClick" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_ugg81")
volume_db = -6.0
bus = &"Main Menu SFX"

[connection signal="focus_exited" from="VBoxContainer/BackButton" to="." method="_on_back_button_focus_exited"]
[connection signal="pressed" from="VBoxContainer/BackButton" to="." method="_on_back_button_pressed"]
[connection signal="focus_exited" from="VBoxContainer/ExitButton" to="." method="_on_exit_button_focus_exited"]
[connection signal="pressed" from="VBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
